--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.gstatic.com/s/materialicons/v42/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2" rel="preload"
-    as="font" crossorigin>
   <meta charset="UTF-8">
-  <title></title>
-  <script defer src="main.dart.js" type="application/javascript"></script>
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="xps">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+
+  <title>xps</title>
+  <link rel="manifest" href="manifest.json">
 </head>
-
 <body>
+ 
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
-
 </html>
